@@ -172,14 +172,14 @@ file_mapping_handle::file_mapping_handle(file_handle file, open_mode_t const mod
 file_mapping::file_mapping(file_handle file, open_mode_t const mode, std::int64_t const file_size)
 	: m_size(memory_map_size(mode, file_size, file))
 	, m_file(std::move(file))
-	, m_mapping(m_size >= mapped_file_cutoff ? mmap(nullptr, static_cast<std::size_t>(m_size)
-			, mmap_prot(mode), mmap_flags(mode), m_file.fd(), 0)
-	: nullptr)
+	, m_mapping((mode & open_mode::no_mmap) ? nullptr
+		: mmap(nullptr, static_cast<std::size_t>(m_size)
+			, mmap_prot(mode), mmap_flags(mode), m_file.fd(), 0))
 {
 	TORRENT_ASSERT(file_size >= 0);
 	// you can't create an mmap of size 0, so we just set it to null. We
 	// still need to create the empty file.
-	if (file_size >= mapped_file_cutoff && m_mapping == map_failed)
+	if (!(mode & open_mode::no_mmap) && m_mapping == map_failed)
 	{
 		throw_ex<storage_error>(error_code(errno, system_category()), operation_t::file_mmap);
 	}
@@ -228,13 +228,12 @@ file_mapping::file_mapping(file_handle file, open_mode_t const mode
 	: m_size(memory_map_size(mode, file_size, file))
 	, m_file(std::move(file), mode, m_size)
 	, m_open_unmap_lock(open_unmap_lock)
-	, m_mapping(m_size >= mapped_file_cutoff ? MapViewOfFile(m_file.handle()
-		, map_access(mode), 0, 0, static_cast<std::size_t>(m_size))
-		: nullptr)
+	, m_mapping((mode & open_mode::no_mmap) ? nullptr
+		: MapViewOfFile(m_file.handle(), map_access(mode), 0, 0, static_cast<std::size_t>(m_size)))
 {
 	// you can't create an mmap of size 0, so we just set it to null. We
 	// still need to create the empty file.
-	if (m_size >= mapped_file_cutoff && m_mapping == nullptr)
+	if (!(mode & open_mode::no_mmap) && m_mapping == nullptr)
 		throw_ex<storage_error>(error_code(GetLastError(), system_category()), operation_t::file_mmap);
 }
 
